--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.6.96" !default;
+$mdi-version:          "6.7.96" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -734,6 +734,7 @@ $mdi-icons: (
   "barley-off": F0B5D,
   "barn": F0B5E,
   "barrel": F0074,
+  "barrel-outline": F1A28,
   "baseball": F0852,
   "baseball-bat": F0853,
   "baseball-diamond": F15EC,
@@ -888,6 +889,8 @@ $mdi-icons: (
   "bell-check-outline": F11E6,
   "bell-circle": F0D5A,
   "bell-circle-outline": F0D5B,
+  "bell-cog": F1A29,
+  "bell-cog-outline": F1A2A,
   "bell-minus": F13E9,
   "bell-minus-outline": F13EA,
   "bell-off": F009B,
@@ -925,7 +928,11 @@ $mdi-icons: (
   "blender-outline": F181A,
   "blender-software": F00AB,
   "blinds": F00AC,
+  "blinds-horizontal": F1A2B,
+  "blinds-horizontal-closed": F1A2C,
   "blinds-open": F1011,
+  "blinds-vertical": F1A2D,
+  "blinds-vertical-closed": F1A2E,
   "block-helper": F00AD,
   "blood-bag": F0CEC,
   "bluetooth": F00AF,
@@ -1149,6 +1156,7 @@ $mdi-icons: (
   "bug-check-outline": F0A2F,
   "bug-outline": F0A30,
   "bugle": F0DB4,
+  "bulkhead-light": F1A2F,
   "bulldozer": F0B22,
   "bullet": F0CF3,
   "bulletin-board": F00E5,
@@ -1207,6 +1215,8 @@ $mdi-icons: (
   "calendar-end": F166C,
   "calendar-expand-horizontal": F189E,
   "calendar-export": F0B24,
+  "calendar-filter": F1A32,
+  "calendar-filter-outline": F1A33,
   "calendar-heart": F09D2,
   "calendar-import": F0B25,
   "calendar-lock": F1641,
@@ -1234,8 +1244,11 @@ $mdi-icons: (
   "calendar-text": F00F5,
   "calendar-text-outline": F0C46,
   "calendar-today": F00F6,
+  "calendar-today-outline": F1A30,
   "calendar-week": F0A33,
   "calendar-week-begin": F0A34,
+  "calendar-week-begin-outline": F1A31,
+  "calendar-week-outline": F1A34,
   "calendar-weekend": F0ED9,
   "calendar-weekend-outline": F0EDA,
   "call-made": F00F7,
@@ -1799,6 +1812,8 @@ $mdi-icons: (
   "cloud-lock-outline": F11F2,
   "cloud-off-outline": F0164,
   "cloud-outline": F0163,
+  "cloud-percent": F1A35,
+  "cloud-percent-outline": F1A36,
   "cloud-print": F0165,
   "cloud-print-outline": F0166,
   "cloud-question": F0A39,
@@ -1812,6 +1827,7 @@ $mdi-icons: (
   "cloud-upload-outline": F0B7E,
   "clover": F0816,
   "coach-lamp": F1020,
+  "coach-lamp-variant": F1A37,
   "coat-rack": F109E,
   "code-array": F0168,
   "code-braces": F0169,
@@ -1922,6 +1938,7 @@ $mdi-icons: (
   "compass-off-outline": F0B81,
   "compass-outline": F018C,
   "compass-rose": F1382,
+  "compost": F1A38,
   "cone": F194C,
   "cone-off": F194D,
   "connection": F1616,
@@ -2097,6 +2114,7 @@ $mdi-icons: (
   "currency-eth": F07BB,
   "currency-eur": F01AD,
   "currency-eur-off": F1315,
+  "currency-fra": F1A39,
   "currency-gbp": F01AE,
   "currency-ils": F0C61,
   "currency-inr": F01AF,
@@ -2588,6 +2606,7 @@ $mdi-icons: (
   "fan-auto": F171D,
   "fan-chevron-down": F146D,
   "fan-chevron-up": F146E,
+  "fan-clock": F1A3A,
   "fan-minus": F1470,
   "fan-off": F081D,
   "fan-plus": F146F,
@@ -2716,6 +2735,10 @@ $mdi-icons: (
   "file-replace-outline": F0B33,
   "file-restore": F0670,
   "file-restore-outline": F1038,
+  "file-rotate-left": F1A3B,
+  "file-rotate-left-outline": F1A3C,
+  "file-rotate-right": F1A3D,
+  "file-rotate-right-outline": F1A3E,
   "file-search": F0C7C,
   "file-search-outline": F0C7D,
   "file-send": F022A,
@@ -2759,6 +2782,8 @@ $mdi-icons: (
   "filter-menu-outline": F10E6,
   "filter-minus": F0EEE,
   "filter-minus-outline": F0EEF,
+  "filter-multiple": F1A3F,
+  "filter-multiple-outline": F1A40,
   "filter-off": F14EF,
   "filter-off-outline": F14F0,
   "filter-outline": F0233,
@@ -3336,6 +3361,7 @@ $mdi-icons: (
   "guitar-pick": F02C5,
   "guitar-pick-outline": F02C6,
   "guy-fawkes-mask": F0825,
+  "gymnastics": F1A41,
   "hail": F0AC1,
   "hair-dryer": F10EF,
   "hair-dryer-outline": F10F0,
@@ -3359,6 +3385,7 @@ $mdi-icons: (
   "hand-back-right-off-outline": F1833,
   "hand-back-right-outline": F182D,
   "hand-clap": F194B,
+  "hand-clap-off": F1A42,
   "hand-coin": F188F,
   "hand-coin-outline": F1890,
   "hand-extended": F18B6,
@@ -3459,6 +3486,9 @@ $mdi-icons: (
   "heart-remove-outline": F1433,
   "heart-settings": F1665,
   "heart-settings-outline": F1666,
+  "heat-pump": F1A43,
+  "heat-pump-outline": F1A44,
+  "heat-wave": F1A45,
   "helicopter": F0AC2,
   "help": F02D6,
   "help-box": F078B,
@@ -3533,6 +3563,8 @@ $mdi-icons: (
   "home-minus": F0974,
   "home-minus-outline": F13D5,
   "home-modern": F02DD,
+  "home-off": F1A46,
+  "home-off-outline": F1A47,
   "home-outline": F06A1,
   "home-plus": F0975,
   "home-plus-outline": F13D6,
@@ -3796,6 +3828,8 @@ $mdi-icons: (
   "lan-connect": F0318,
   "lan-disconnect": F0319,
   "lan-pending": F031A,
+  "landslide": F1A48,
+  "landslide-outline": F1A49,
   "language-c": F0671,
   "language-cpp": F0672,
   "language-csharp": F031B,
@@ -3820,6 +3854,7 @@ $mdi-icons: (
   "language-typescript": F06E6,
   "language-xaml": F0673,
   "laptop": F0322,
+  "laptop-account": F1A4A,
   "laptop-off": F06E7,
   "laravel": F0AD0,
   "laser-pointer": F1484,
@@ -3855,6 +3890,7 @@ $mdi-icons: (
   "led-outline": F032D,
   "led-strip": F07D6,
   "led-strip-variant": F1051,
+  "led-strip-variant-off": F1A4B,
   "led-variant-off": F032E,
   "led-variant-on": F032F,
   "led-variant-outline": F0330,
@@ -3890,9 +3926,20 @@ $mdi-icons: (
   "lightbulb-multiple-off": F12CF,
   "lightbulb-multiple-off-outline": F12D0,
   "lightbulb-multiple-outline": F1256,
+  "lightbulb-night": F1A4C,
+  "lightbulb-night-outline": F1A4D,
   "lightbulb-off": F0E4F,
   "lightbulb-off-outline": F0E50,
   "lightbulb-on": F06E8,
+  "lightbulb-on-10": F1A4E,
+  "lightbulb-on-20": F1A4F,
+  "lightbulb-on-30": F1A50,
+  "lightbulb-on-40": F1A51,
+  "lightbulb-on-50": F1A52,
+  "lightbulb-on-60": F1A53,
+  "lightbulb-on-70": F1A54,
+  "lightbulb-on-80": F1A55,
+  "lightbulb-on-90": F1A56,
   "lightbulb-on-outline": F06E9,
   "lightbulb-outline": F0336,
   "lightbulb-question": F19E3,
@@ -4144,6 +4191,10 @@ $mdi-icons: (
   "message-text-outline": F036A,
   "message-video": F036B,
   "meteor": F0629,
+  "meter-electric": F1A57,
+  "meter-electric-outline": F1A58,
+  "meter-gas": F1A59,
+  "meter-gas-outline": F1A5A,
   "metronome": F07DA,
   "metronome-tick": F07DB,
   "micro-sd": F07DC,
@@ -4224,6 +4275,7 @@ $mdi-icons: (
   "molecule-co": F12FE,
   "molecule-co2": F07E4,
   "monitor": F0379,
+  "monitor-account": F1A5B,
   "monitor-arrow-down": F19D0,
   "monitor-arrow-down-variant": F19D1,
   "monitor-cellphone": F0989,
@@ -4821,6 +4873,7 @@ $mdi-icons: (
   "piggy-bank": F1007,
   "piggy-bank-outline": F1679,
   "pill": F0402,
+  "pill-off": F1A5C,
   "pillar": F0702,
   "pin": F0403,
   "pin-off": F0404,
@@ -4879,6 +4932,8 @@ $mdi-icons: (
   "plus-circle-multiple": F034C,
   "plus-circle-multiple-outline": F0418,
   "plus-circle-outline": F0419,
+  "plus-lock": F1A5D,
+  "plus-lock-open": F1A5E,
   "plus-minus": F0992,
   "plus-minus-box": F0993,
   "plus-minus-variant": F14C9,
@@ -4903,8 +4958,10 @@ $mdi-icons: (
   "polo": F14C3,
   "polymer": F0421,
   "pool": F0606,
+  "pool-thermometer": F1A5F,
   "popcorn": F0422,
   "post": F1008,
+  "post-lamp": F1A60,
   "post-outline": F1009,
   "postage-stamp": F0CBB,
   "pot": F02E5,
@@ -5025,6 +5082,8 @@ $mdi-icons: (
   "quality-medium": F0A0D,
   "quora": F0D29,
   "rabbit": F0907,
+  "rabbit-variant": F1A61,
+  "rabbit-variant-outline": F1A62,
   "racing-helmet": F0D93,
   "racquetball": F0D94,
   "radar": F0437,
@@ -5065,6 +5124,14 @@ $mdi-icons: (
   "read": F0447,
   "receipt": F0449,
   "receipt-outline": F19DC,
+  "receipt-text-check": F1A63,
+  "receipt-text-check-outline": F1A64,
+  "receipt-text-minus": F1A65,
+  "receipt-text-minus-outline": F1A66,
+  "receipt-text-plus": F1A67,
+  "receipt-text-plus-outline": F1A68,
+  "receipt-text-remove": F1A69,
+  "receipt-text-remove-outline": F1A6A,
   "record": F044A,
   "record-circle": F0EC2,
   "record-circle-outline": F0EC3,
@@ -5204,6 +5271,8 @@ $mdi-icons: (
   "rocket-launch-outline": F14DF,
   "rocket-outline": F13AF,
   "rodent": F1327,
+  "roller-shade": F1A6B,
+  "roller-shade-closed": F1A6C,
   "roller-skate": F0D2B,
   "roller-skate-off": F0145,
   "rollerblade": F0D2C,
@@ -5325,6 +5394,8 @@ $mdi-icons: (
   "seed-off": F13FD,
   "seed-off-outline": F13FE,
   "seed-outline": F0E63,
+  "seed-plus": F1A6D,
+  "seed-plus-outline": F1A6E,
   "seesaw": F15A4,
   "segment": F0ECB,
   "select": F0485,
@@ -5475,6 +5546,7 @@ $mdi-icons: (
   "shopping-music": F049B,
   "shopping-outline": F11D5,
   "shopping-search": F0F84,
+  "shopping-search-outline": F1A6F,
   "shore": F14F9,
   "shovel": F0710,
   "shovel-off": F0711,
@@ -5607,11 +5679,14 @@ $mdi-icons: (
   "snowboard": F1307,
   "snowflake": F0717,
   "snowflake-alert": F0F29,
+  "snowflake-check": F1A70,
   "snowflake-melt": F12CB,
   "snowflake-off": F14E3,
+  "snowflake-thermometer": F1A71,
   "snowflake-variant": F0F2A,
   "snowman": F04B7,
   "snowmobile": F06DD,
+  "snowshoeing": F1A72,
   "soccer": F04B8,
   "soccer-field": F0834,
   "social-distance-2-meters": F1579,
@@ -5623,6 +5698,8 @@ $mdi-icons: (
   "solar-panel": F0D9B,
   "solar-panel-large": F0D9C,
   "solar-power": F0A72,
+  "solar-power-variant": F1A73,
+  "solar-power-variant-outline": F1A74,
   "soldering-iron": F1092,
   "solid": F068D,
   "sony-playstation": F0414,
@@ -5804,6 +5881,8 @@ $mdi-icons: (
   "stop": F04DB,
   "stop-circle": F0666,
   "stop-circle-outline": F0667,
+  "storage-tank": F1A75,
+  "storage-tank-outline": F1A76,
   "store": F04DC,
   "store-24-hour": F04DD,
   "store-alert": F18C1,
@@ -5848,8 +5927,11 @@ $mdi-icons: (
   "subway-alert-variant": F0D9D,
   "subway-variant": F04DF,
   "summit": F0786,
+  "sun-clock": F1A77,
+  "sun-clock-outline": F1A78,
   "sun-compass": F19A5,
   "sun-snowflake": F1796,
+  "sun-snowflake-variant": F1A79,
   "sun-thermometer": F18D6,
   "sun-thermometer-outline": F18D7,
   "sun-wireless": F17FE,
@@ -5960,6 +6042,8 @@ $mdi-icons: (
   "tag-arrow-right-outline": F1730,
   "tag-arrow-up": F1731,
   "tag-arrow-up-outline": F1732,
+  "tag-check": F1A7A,
+  "tag-check-outline": F1A7B,
   "tag-faces": F04FA,
   "tag-heart": F068B,
   "tag-heart-outline": F0BCF,
@@ -6020,6 +6104,8 @@ $mdi-icons: (
   "text-box": F021A,
   "text-box-check": F0EA6,
   "text-box-check-outline": F0EA7,
+  "text-box-edit": F1A7C,
+  "text-box-edit-outline": F1A7D,
   "text-box-minus": F0EA8,
   "text-box-minus-outline": F0EA9,
   "text-box-multiple": F0AB7,
@@ -6034,6 +6120,7 @@ $mdi-icons: (
   "text-long": F09AA,
   "text-recognition": F113D,
   "text-search": F13B8,
+  "text-search-variant": F1A7E,
   "text-shadow": F0669,
   "text-short": F09A9,
   "text-to-speech": F050A,
@@ -6045,6 +6132,7 @@ $mdi-icons: (
   "thermometer": F050F,
   "thermometer-alert": F0E01,
   "thermometer-bluetooth": F1895,
+  "thermometer-check": F1A7F,
   "thermometer-chevron-down": F0E02,
   "thermometer-chevron-up": F0E03,
   "thermometer-high": F10C2,
@@ -6053,6 +6141,7 @@ $mdi-icons: (
   "thermometer-minus": F0E04,
   "thermometer-off": F1531,
   "thermometer-plus": F0E05,
+  "thermometer-water": F1A80,
   "thermostat": F0393,
   "thermostat-box": F0891,
   "thought-bubble": F07F6,
@@ -6258,6 +6347,7 @@ $mdi-icons: (
   "tshirt-crew-outline": F053F,
   "tshirt-v": F0A7C,
   "tshirt-v-outline": F0540,
+  "tsunami": F1A81,
   "tumble-dryer": F0917,
   "tumble-dryer-alert": F11BA,
   "tumble-dryer-off": F11BB,
@@ -6267,6 +6357,7 @@ $mdi-icons: (
   "tune-vertical-variant": F1543,
   "tunnel": F183D,
   "tunnel-outline": F183E,
+  "turbine": F1A82,
   "turkey": F171B,
   "turnstile": F0CD5,
   "turnstile-outline": F0CD6,
@@ -6449,6 +6540,8 @@ $mdi-icons: (
   "virus-outline": F13B7,
   "vlc": F057C,
   "voicemail": F057D,
+  "volcano": F1A83,
+  "volcano-outline": F1A84,
   "volleyball": F09B4,
   "volume-high": F057E,
   "volume-low": F057F,
@@ -6526,6 +6619,8 @@ $mdi-icons: (
   "water-remove": F150C,
   "water-remove-outline": F150D,
   "water-sync": F17C6,
+  "water-thermometer": F1A85,
+  "water-thermometer-outline": F1A86,
   "water-well": F106B,
   "water-well-outline": F106C,
   "waterfall": F1849,
@@ -6594,6 +6689,7 @@ $mdi-icons: (
   "weight-pound": F09B5,
   "whatsapp": F05A3,
   "wheel-barrow": F14F2,
+  "wheelchair": F1A87,
   "wheelchair-accessibility": F05A4,
   "whistle": F09B6,
   "whistle-outline": F12BC,
@@ -6648,6 +6744,8 @@ $mdi-icons: (
   "wifi-strength-outline": F092F,
   "wifi-sync": F16C7,
   "wikipedia": F05AC,
+  "wind-power": F1A88,
+  "wind-power-outline": F1A89,
   "wind-turbine": F0DA5,
   "wind-turbine-alert": F19AB,
   "wind-turbine-check": F19AC,
@@ -6661,7 +6759,9 @@ $mdi-icons: (
   "window-restore": F05B2,
   "window-shutter": F111C,
   "window-shutter-alert": F111D,
+  "window-shutter-cog": F1A8A,
   "window-shutter-open": F111E,
+  "window-shutter-settings": F1A8B,
   "windsock": F15FA,
   "wiper": F0AE9,
   "wiper-wash": F0DA6,
