--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.7.96" !default;
+$mdi-version:          "6.8.96" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -129,6 +129,7 @@ $mdi-icons: (
   "account-tie-voice-off": F130A,
   "account-tie-voice-off-outline": F130B,
   "account-tie-voice-outline": F1309,
+  "account-tie-woman": F1A8C,
   "account-voice": F05CB,
   "account-voice-off": F0ED4,
   "account-wrench": F189A,
@@ -638,7 +639,12 @@ $mdi-icons: (
   "atom": F0768,
   "atom-variant": F0E7B,
   "attachment": F0066,
+  "attachment-check": F1AC1,
   "attachment-lock": F19C4,
+  "attachment-minus": F1AC2,
+  "attachment-off": F1AC3,
+  "attachment-plus": F1AC4,
+  "attachment-remove": F1AC5,
   "audio-input-rca": F186B,
   "audio-input-stereo-minijack": F186C,
   "audio-input-xlr": F186D,
@@ -1105,6 +1111,10 @@ $mdi-icons: (
   "briefcase": F00D6,
   "briefcase-account": F0CF0,
   "briefcase-account-outline": F0CF1,
+  "briefcase-arrow-left-right": F1A8D,
+  "briefcase-arrow-left-right-outline": F1A8E,
+  "briefcase-arrow-up-down": F1A8F,
+  "briefcase-arrow-up-down-outline": F1A90,
   "briefcase-check": F00D7,
   "briefcase-check-outline": F131E,
   "briefcase-clock": F10D0,
@@ -1451,6 +1461,7 @@ $mdi-icons: (
   "cash": F0114,
   "cash-100": F0115,
   "cash-check": F14EE,
+  "cash-clock": F1A91,
   "cash-fast": F185C,
   "cash-lock": F14EA,
   "cash-lock-open": F14EB,
@@ -1461,6 +1472,7 @@ $mdi-icons: (
   "cash-refund": F0A9C,
   "cash-register": F0CF4,
   "cash-remove": F1262,
+  "cash-sync": F1A92,
   "cassette": F09D4,
   "cast": F0118,
   "cast-audio": F101E,
@@ -2393,6 +2405,7 @@ $mdi-icons: (
   "dumbbell": F01E6,
   "dump-truck": F0C67,
   "ear-hearing": F07C5,
+  "ear-hearing-loop": F1AEE,
   "ear-hearing-off": F0A45,
   "earbuds": F184F,
   "earbuds-off": F1850,
@@ -2636,6 +2649,10 @@ $mdi-icons: (
   "file-account-outline": F1028,
   "file-alert": F0A4B,
   "file-alert-outline": F0A4C,
+  "file-arrow-left-right": F1A93,
+  "file-arrow-left-right-outline": F1A94,
+  "file-arrow-up-down": F1A95,
+  "file-arrow-up-down-outline": F1A96,
   "file-cabinet": F0AB6,
   "file-cad": F0EEB,
   "file-cad-box": F0EEC,
@@ -2661,11 +2678,21 @@ $mdi-icons: (
   "file-delimited": F0218,
   "file-delimited-outline": F0EA5,
   "file-document": F0219,
+  "file-document-alert": F1A97,
+  "file-document-alert-outline": F1A98,
+  "file-document-check": F1A99,
+  "file-document-check-outline": F1A9A,
   "file-document-edit": F0DC8,
   "file-document-edit-outline": F0DC9,
+  "file-document-minus": F1A9B,
+  "file-document-minus-outline": F1A9C,
   "file-document-multiple": F1517,
   "file-document-multiple-outline": F1518,
   "file-document-outline": F09EE,
+  "file-document-plus": F1A9D,
+  "file-document-plus-outline": F1A9E,
+  "file-document-remove": F1A9F,
+  "file-document-remove-outline": F1AA0,
   "file-download": F0965,
   "file-download-outline": F0966,
   "file-edit": F11E7,
@@ -2705,6 +2732,8 @@ $mdi-icons: (
   "file-lock-outline": F1030,
   "file-marker": F1774,
   "file-marker-outline": F1775,
+  "file-minus": F1AA1,
+  "file-minus-outline": F1AA2,
   "file-move": F0AB9,
   "file-move-outline": F1031,
   "file-multiple": F0222,
@@ -2778,6 +2807,8 @@ $mdi-icons: (
   "filter": F0232,
   "filter-check": F18EC,
   "filter-check-outline": F18ED,
+  "filter-cog": F1AA3,
+  "filter-cog-outline": F1AA4,
   "filter-menu": F10E5,
   "filter-menu-outline": F10E6,
   "filter-minus": F0EEE,
@@ -2791,6 +2822,8 @@ $mdi-icons: (
   "filter-plus-outline": F0EF1,
   "filter-remove": F0234,
   "filter-remove-outline": F0235,
+  "filter-settings": F1AA5,
+  "filter-settings-outline": F1AA6,
   "filter-variant": F0236,
   "filter-variant-minus": F1112,
   "filter-variant-plus": F1113,
@@ -2946,6 +2979,8 @@ $mdi-icons: (
   "folder-key-outline": F10EC,
   "folder-lock": F0250,
   "folder-lock-open": F0251,
+  "folder-lock-open-outline": F1AA7,
+  "folder-lock-outline": F1AA8,
   "folder-marker": F126D,
   "folder-marker-outline": F126E,
   "folder-move": F0252,
@@ -3136,7 +3171,13 @@ $mdi-icons: (
   "format-wrap-tight": F028A,
   "format-wrap-top-bottom": F028B,
   "forum": F028C,
+  "forum-minus": F1AA9,
+  "forum-minus-outline": F1AAA,
   "forum-outline": F0822,
+  "forum-plus": F1AAB,
+  "forum-plus-outline": F1AAC,
+  "forum-remove": F1AAD,
+  "forum-remove-outline": F1AAE,
   "forward": F028D,
   "forwardburger": F0D75,
   "fountain": F096B,
@@ -3489,6 +3530,7 @@ $mdi-icons: (
   "heat-pump": F1A43,
   "heat-pump-outline": F1A44,
   "heat-wave": F1A45,
+  "heating-coil": F1AAF,
   "helicopter": F0AC2,
   "help": F02D6,
   "help-box": F078B,
@@ -3669,6 +3711,8 @@ $mdi-icons: (
   "image-filter-tilt-shift": F02F7,
   "image-filter-vintage": F02F8,
   "image-frame": F0E49,
+  "image-lock": F1AB0,
+  "image-lock-outline": F1AB1,
   "image-marker": F177B,
   "image-marker-outline": F177C,
   "image-minus": F1419,
@@ -3828,6 +3872,12 @@ $mdi-icons: (
   "lan-connect": F0318,
   "lan-disconnect": F0319,
   "lan-pending": F031A,
+  "land-fields": F1AB2,
+  "land-plots": F1AB3,
+  "land-plots-circle": F1AB4,
+  "land-plots-circle-variant": F1AB5,
+  "land-rows-horizontal": F1AB6,
+  "land-rows-vertical": F1AB7,
   "landslide": F1A48,
   "landslide-outline": F1A49,
   "language-c": F0671,
@@ -4121,6 +4171,7 @@ $mdi-icons: (
   "medal": F0987,
   "medal-outline": F1326,
   "medical-bag": F06EF,
+  "medical-cotton-swab": F1AB8,
   "meditation": F117B,
   "memory": F035B,
   "menorah": F17D4,
@@ -4447,6 +4498,7 @@ $mdi-icons: (
   "network-off": F0C9B,
   "network-off-outline": F0C9C,
   "network-outline": F0C9D,
+  "network-pos": F1ACB,
   "network-strength-1": F08F4,
   "network-strength-1-alert": F08F5,
   "network-strength-2": F08F6,
@@ -4735,7 +4787,12 @@ $mdi-icons: (
   "paper-roll": F1157,
   "paper-roll-outline": F1158,
   "paperclip": F03E2,
+  "paperclip-check": F1AC6,
   "paperclip-lock": F19DA,
+  "paperclip-minus": F1AC7,
+  "paperclip-off": F1AC8,
+  "paperclip-plus": F1AC9,
+  "paperclip-remove": F1ACA,
   "parachute": F0CB4,
   "parachute-outline": F0CB5,
   "paragliding": F1745,
@@ -5278,6 +5335,8 @@ $mdi-icons: (
   "rollerblade": F0D2C,
   "rollerblade-off": F002E,
   "rollupjs": F0BC0,
+  "rolodex": F1AB9,
+  "rolodex-outline": F1ABA,
   "roman-numeral-1": F1088,
   "roman-numeral-10": F1091,
   "roman-numeral-2": F1089,
@@ -5325,6 +5384,7 @@ $mdi-icons: (
   "safe-square-outline": F127D,
   "safety-goggles": F0D30,
   "sail-boat": F0EC8,
+  "sail-boat-sink": F1AEF,
   "sale": F046F,
   "sale-outline": F1A06,
   "salesforce": F088E,
@@ -5730,6 +5790,7 @@ $mdi-icons: (
   "sort-variant": F04BF,
   "sort-variant-lock": F0CCD,
   "sort-variant-lock-open": F0CCE,
+  "sort-variant-off": F1ABB,
   "sort-variant-remove": F1147,
   "soundbar": F17DB,
   "soundcloud": F04C0,
@@ -6063,6 +6124,11 @@ $mdi-icons: (
   "tag-text": F1224,
   "tag-text-outline": F04FD,
   "tailwind": F13FF,
+  "tally-mark-1": F1ABC,
+  "tally-mark-2": F1ABD,
+  "tally-mark-3": F1ABE,
+  "tally-mark-4": F1ABF,
+  "tally-mark-5": F1AC0,
   "tangram": F04F8,
   "tank": F0D3A,
   "tanker-truck": F0FE5,
@@ -6184,11 +6250,39 @@ $mdi-icons: (
   "timer": F13AB,
   "timer-10": F051C,
   "timer-3": F051D,
+  "timer-alert": F1ACC,
+  "timer-alert-outline": F1ACD,
+  "timer-cancel": F1ACE,
+  "timer-cancel-outline": F1ACF,
+  "timer-check": F1AD0,
+  "timer-check-outline": F1AD1,
   "timer-cog": F1925,
   "timer-cog-outline": F1926,
+  "timer-edit": F1AD2,
+  "timer-edit-outline": F1AD3,
+  "timer-lock": F1AD4,
+  "timer-lock-open": F1AD5,
+  "timer-lock-open-outline": F1AD6,
+  "timer-lock-outline": F1AD7,
+  "timer-marker": F1AD8,
+  "timer-marker-outline": F1AD9,
+  "timer-minus": F1ADA,
+  "timer-minus-outline": F1ADB,
+  "timer-music": F1ADC,
+  "timer-music-outline": F1ADD,
   "timer-off": F13AC,
   "timer-off-outline": F051E,
   "timer-outline": F051B,
+  "timer-pause": F1ADE,
+  "timer-pause-outline": F1ADF,
+  "timer-play": F1AE0,
+  "timer-play-outline": F1AE1,
+  "timer-plus": F1AE2,
+  "timer-plus-outline": F1AE3,
+  "timer-refresh": F1AE4,
+  "timer-refresh-outline": F1AE5,
+  "timer-remove": F1AE6,
+  "timer-remove-outline": F1AE7,
   "timer-sand": F051F,
   "timer-sand-complete": F199F,
   "timer-sand-empty": F06AD,
@@ -6196,6 +6290,12 @@ $mdi-icons: (
   "timer-sand-paused": F19A0,
   "timer-settings": F1923,
   "timer-settings-outline": F1924,
+  "timer-star": F1AE8,
+  "timer-star-outline": F1AE9,
+  "timer-stop": F1AEA,
+  "timer-stop-outline": F1AEB,
+  "timer-sync": F1AEC,
+  "timer-sync-outline": F1AED,
   "timetable": F0520,
   "tire": F1896,
   "toaster": F1063,
